<resources>
    <string name="app_name">Majsoul_Soundboard</string>
    <string name="sign">발성</string>
    <string name="result">결과</string>
    <string name="score">점수</string>
    <string name="back">뒤로가기</string>
    <string name="chi">치</string>
    <string name="kan">깡</string>
    <string name="pon">퐁</string>
    <string name="pedora">북도라</string>
    <string name="tsumo">쯔모</string>
    <string name="ron">론</string>
    <string name="richi">리치</string>
    <string name="doublerichi">더블리치</string>
    <string name="east">동</string>
    <string name="west">서</string>
    <string name="ippatsu">일발</string>
    <string name="pinfu">핑후</string>
    <string name="south">남</string>
    <string name="north">북</string>
    <string name="deast">더블동</string>
    <string name="dwest">더블서</string>
    <string name="haku">백</string>
    <string name="chuu">중</string>
    <string name="dsouth">더블남</string>
    <string name="dnorth">더블북</string>
    <string name="patsu">발</string>
    <string name="tanyao">땅야오</string>
    <string name="iipeikou">이페코</string>
    <string name="houtei">하저로어(호테이)</string>
    <string name="rinshan">영상개화</string>
    <string name="chiitoi">치또이쯔</string>
    <string name="haitei">해저모월(하이테이)</string>
    <string name="chankan">창깡</string>
    <string name="toitoi">또이또이</string>
    <string name="sanshoku">삼색삼동순</string>
    <string name="sanshoku_doukou">삼색삼동각</string>
    <string name="sanankou">삼암각</string>
    <string name="ittsu">일기통관</string>
    <string name="shousangen">소삼원</string>
    <string name="sankantsu">삼깡쯔</string>
    <string name="chanta">혼전대요구(찬타)</string>
    <string name="honroutou">혼노두</string>
    <string name="ryanpeikou">량페코</string>
    <string name="honiisou">혼일색</string>
    <string name="junchan">준찬타(준짱)</string>
    <string name="chinitsu">청일색</string>
    <string name="tenhou">천화</string>
    <string name="kokushi">국사무쌍</string>
    <string name="suuankou">쓰앙꼬</string>
    <string name="chuuren">구련보등</string>
    <string name="ryuuiisou">녹일색</string>
    <string name="daisangen">대삼원</string>
    <string name="chiihou">지화</string>
    <string name="kokushi13">국사무쌍13면팅</string>
    <string name="suuankou1men">쓰앙꼬 단기</string>
    <string name="chuuren9men">순정구련보등</string>
    <string name="tsuuiisou">자일색</string>
    <string name="shousuushii">소사희</string>
    <string name="daisuushii">대사희</string>
    <string name="suukan">쓰깡쯔</string>
    <string name="nagashi">유국만관</string>
    <string name="chinroutou">청노두</string>
    <string name="dora01">도라1</string>
    <string name="dora03">도라3</string>
    <string name="dora05">도라5</string>
    <string name="dora07">도라7</string>
    <string name="dora09">도라9</string>
    <string name="dora11">도라11</string>
    <string name="dora02">도라2</string>
    <string name="dora04">도라4</string>
    <string name="dora06">도라6</string>
    <string name="dora08">도라8</string>
    <string name="dora10">도라10</string>
    <string name="dora13">도라13</string>
    <string name="dora12">도라12</string>
    <string name="tenpai">텐파이</string>
    <string name="mangan">만관</string>
    <string name="baiman">배만</string>
    <string name="kazoeyakuman">헤아림역만</string>
    <string name="noten">노텐</string>
    <string name="haneman">하네만</string>
    <string name="sanbaiman">3배만</string>
    <string name="yakuman">역만</string>
    <string name="yakuman2">2배역만</string>
    <string name="yakuman4">4배역만</string>
    <string name="yakuman6">6배역만</string>
    <string name="tsuukan">4깡유국</string>
    <string name="winner">1등!</string>
    <string name="yakuman3">3배역만</string>
    <string name="yakuman5">5배역만</string>
    <string name="kyusyu">구종구패</string>
    <string name="wind4">4풍연타</string>
</resources>