<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/tenpai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/tenpai" />

                    <Button
                        android:id="@+id/mangan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mangan" />

                    <Button
                        android:id="@+id/baiman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/baiman" />

                    <Button
                        android:id="@+id/kazoeyakuman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kazoeyakuman" />

                    <Button
                        android:id="@+id/yakuman2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yakuman2" />

                    <Button
                        android:id="@+id/yakuman4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yakuman4" />

                    <Button
                        android:id="@+id/yakuman6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yakuman6" />

                    <Button
                        android:id="@+id/tsuukan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tsuukan" />

                    <Button
                        android:id="@+id/winner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/winner" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/noten"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/noten" />

                    <Button
                        android:id="@+id/haneman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/haneman" />

                    <Button
                        android:id="@+id/sanbaiman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sanbaiman" />

                    <Button
                        android:id="@+id/yakuman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yakuman" />

                    <Button
                        android:id="@+id/yakuman3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yakuman3" />

                    <Button
                        android:id="@+id/yakuman5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yakuman5" />

                    <Button
                        android:id="@+id/kyusyu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kyusyu" />

                    <Button
                        android:id="@+id/wind4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind4" />


                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/back" />

    </RelativeLayout>


</LinearLayout>
