<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp">

                    <Button
                        android:id="@+id/chi"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/chi" />

                    <Button
                        android:id="@+id/pon"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pon" />

                    <Button
                        android:id="@+id/richi"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/richi" />

                    <Button
                        android:id="@+id/tsumo"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tsumo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/kan"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/kan" />

                    <Button
                        android:id="@+id/pedora"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pedora" />

                    <Button
                        android:id="@+id/doublerichi"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/doublerichi" />

                    <Button
                        android:id="@+id/ron"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ron" />


                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="11">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/back" />

    </RelativeLayout>


</LinearLayout>
