<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <Button
        android:id="@+id/sign"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign"/>

    <Button
        android:id="@+id/result"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/result"/>

    <Button
        android:id="@+id/score"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/score"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>


</LinearLayout>
